@@ -190,6 +190,7 @@ extern int          cf_player_move(player *pl, int dir);
 extern partylist   *cf_player_get_party(object *op);
 extern void         cf_player_set_party(object *op, partylist *party);
 extern int          cf_player_can_pay(object *op);
+extern int          cf_player_knowledge_has(object *op, const char *knowledge);
 
 /* Archetypes */
 extern archetype   *cf_archetype_get_first(void);
